Remove legendary info command